<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2009 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>
   <string name="flash_browser_plugin">Flash Plugin</string>
   <string name="audio_files">Audio Files</string>
   <string name="image_files">Image Files</string>
   <string name="video_files">Video Files</string>
   <string name="empty_file_list">No files were found.</string>
   <string name="button_ok">OK</string>
   <string name="button_cancel">Cancel</string>
   <string name="button_continue">Continue</string>
   <string name="file_save_as">Save As:</string>
   <string name="file_download">Download</string>
   <string name="file_upload">Upload</string>
   <string name="button_yes">Yes</string>
   <string name="button_no">No</string>
   <string name="app_name">Security Warning</string>
   <string name="IDA_CURL_SSL_SECURITY_WARNING">Security Warning</string>
   <string name="IDA_CURL_INTERFACE_THISSESS">Trust for Session</string>
   <string name="IDA_CURL_INTERFACE_NOSESS">Cancel</string>
   <string name="IDA_CURL_INTERFACE_OK">Ok</string>
   <string name="IDA_CURL_INTERFACE_UNVERSER_2">The server that the application is connecting to is unverified.</string>
   <string name="IDA_CURL_INTERFACE_ALLSESS">Trust Always</string>
   <string name="IDA_CURL_INTERFACE_SERVER"><b>Server:</b></string>
   <string name="IDA_CURL_INTERFACE_TRUSTSER">Trust this server and make the connection?</string>
   <string name="IDA_CURL_INTERFACE_CNAME_MSG">The name of the server (%1$s) does not match the name on the certificate (%2$s). Trust this server and continue?</string>
   <string name="IDA_CURL_INTERFACE_VIEW_CERT"><u>View Certificate</u></string>
   <string name="IDA_CURL_INTERFACE_CERTIFICATE_DETAILS_TITLE"><u>Certificate Details</u></string>
   <string name="IDA_CERTIFICATE_DETAILS"><b>Certificate:</b>\n
					\n
            		<b><u>Issued To:</u></b>\n
            		Common Name:\n
            		%1$s\n
            		\n
            		Organization:\n
            		%2$s\n
            		\n
            		Organizational Unit:\n
            		%3$s\n
            		\n
            		<b><u>Issued by:</u></b>\n
            		Common Name:\n
            		%4$s\n
            		\n
            		Organization:\n
            		%5$s\n
            		\n
            		Organizational Unit:\n
            		%6$s\n
            		\n
            		<b><u>Validity:</u></b>\n 
            		Issued On:\n
            		%7$s\n
            		\n
            		Expires On:\n
            		%8$s
   </string>
   <string name="IDA_APP_WAITING_DEBUGGER_TITLE"><u>Adobe AIR: Waiting for Connection</u></string>
   <string name="IDA_APP_UNABLE_LISTEN_ERROR"><u>Adobe AIR: Listening for Port</u></string>
   <string name="IDA_APP_WAITING_DEBUGGER_WARNING"><u>The AIR application is waiting for the debugger to make a connection. This may take up to %d seconds.</u></string>
   <string name="IDA_APP_DEBUGGER_TIMEOUT_INFO">Unable to connect to the debugger.<u></u></string>
</resources>
