<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:orientation="vertical"
		android:padding="10px"
        >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/file_save_panel"
			android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
			<TextView
					android:id="@+id/file_save_label"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:text="@string/file_save_as"
					android:paddingRight="5px"
					/>
			<Button	android:id="@+id/file_save_button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_alignParentRight="true"
					android:text="@string/button_ok"
					/>
			<EditText android:id="@+id/file_save_name"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_toLeftOf="@id/file_save_button"
					android:layout_toRightOf="@id/file_save_label"
					android:textColor="#000000"
					android:inputType="text"
					android:background="@android:drawable/editbox_background"
					/>
	</RelativeLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
		>
		<ExpandableListView android:id="@+id/list" 
            android:layout_width="fill_parent"
			android:layout_height="0dip" 
            android:layout_weight="1"
            />
		<TextView android:id="@+id/empty" 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/empty_file_list"
			android:gravity="center"
			android:textStyle="bold"
			/>
	</LinearLayout>
</LinearLayout>
